# panini

./: .clang-format  CMakeLists.txt  LICENSE  README.md  panini-test.cpp  panini.hpp
